<!-- 메인 액티비티 레이아웃 -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- 왼쪽 가이드라인 -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <!-- 중간 가이드라인 -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/middle_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.65" />

    <!-- 오른쪽 가이드라인 -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />

    <!-- 아이디 입력창 -->
    <EditText
        android:id="@+id/edit_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="아이디"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@id/edit_password"
        app:layout_constraintLeft_toLeftOf="@id/left_guideline"
        app:layout_constraintRight_toRightOf="@id/middle_guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        tools:ignore="Autofill,HardcodedText" />

    <!-- 비밀번호 입력창 -->
    <EditText
        android:id="@+id/edit_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="비밀번호"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/left_guideline"
        app:layout_constraintRight_toRightOf="@id/middle_guideline"
        app:layout_constraintTop_toBottomOf="@id/edit_id"
        tools:ignore="Autofill,HardcodedText" />

    <!-- 로그인 버튼 -->
    <Button
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:enabled="false"
        android:text="로그인"
        app:layout_constraintBottom_toBottomOf="@id/edit_password"
        app:layout_constraintLeft_toLeftOf="@id/middle_guideline"
        app:layout_constraintRight_toRightOf="@id/right_guideline"
        app:layout_constraintTop_toTopOf="@id/edit_id"
        tools:ignore="HardcodedText" />
</androidx.constraintlayout.widget.ConstraintLayout>
